--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
   "manifest_version": 3,
-  "name": "My Extension",
-  "icons": {
-    "32": "icon.png"
-  },
+  "name": "Chrome Extension",
   "version": "1.0",
-  "action": {
-    "default_popup": "index.html"
+  "icons": {
+    "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
+    "48": "images/icon-48.png",
+    "128": "images/icon-128.png"
   },
-  "permissions": [
-    "scripting"
-  ],
+  "action": {
+    "default_popup": "popup.html"
+  },
   "host_permissions": [
     "http://*/*",
     "https://*/*"
-  ]
+  ],
+  "permissions": ["scripting", "activeTab"]
 }
