added images and manifest.json to the dist folder

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Chrome Tag Finder",
-  "version": "1.0",
+  "version": "2.0",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -9,11 +9,8 @@
     "128": "images/icon-128.png"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   },
-  "host_permissions": [
-    "http://*/*",
-    "https://*/*"
-  ],
+  "host_permissions": ["http://*/*", "https://*/*"],
   "permissions": ["scripting", "activeTab", "storage"]
 }
